--- a/index.html
+++ b/index.html
@@ -4,36 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="styles/style.css" type="text/css" rel="stylesheet">
+    <link href="styles/import.css" type="text/css" rel="stylesheet">
+    <link href="styles/viewStyles/index.css" type="text/css" rel="stylesheet">    
     <title>Charakter Jesus</title>
 </head>
 <body>
     <header>
         <div class="title">
             <img src="images/log_normal.svg" alt="logo">
-            <h1>Charaktereigenschaften Jesus</h1>
+            <h1>Eigenschaften von Jesus</h1>
         </div>
         <nav>
-            <a href="#">Home</a>
+            <a href="#">Zitate</a>
             <a href="#">Impressum</a>
             <a href="#">Über mich</a>
         </nav>        
     </header>
     <main>
-        <artivle class="art art1">
-            <h2>Ein Mann der Buches</h2>
-            <img src="" alt="Mann des Buches">
+        <article class="art art1">
+            <div class="titel">
+                <a href="#">
+                    <h2>Ein Mann der Buches</h2>
+                    <img src="" alt="Mann des Buches">
+                </a>
+            </div>
+            
             <p>Christi Sinn war erfüllt mit der Heiligen Schrift. Er zitierte das Wort Gottes bezog sich darauf als entgültige Authorität.
                 Die Verse, die er zitierte, trafen immer ins Schwarze-er hatte immer genau die richtigen Worte für die betreffende Situation.
             </p>
-        </artivle>
-        <artivle class="art art2">
-                <h2>Der Stille vor Gott</h2>
-                <img src="" alt="Stille vor Gott">
-                <p>
-                    Er war der gesegnete Mann aus Psalm 1, der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann Tag und Nacht.
-                </p>
-            </artivle>
+        </article>
+        <article class="art art2">
+            <div class="titel">
+                <a href="#"><h2>Der Stille vor Gott</h2>
+                <img src="" alt="Stille vor Gott"></a>
+            </div>
+            <p>
+                Er war der gesegnete Mann aus Psalm 1, der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann Tag und Nacht.
+            </p>
+        </article>
     </main>
     <footer>
         Autor: Schmid Lothar    Aktualisiert: 31.1.2018
