--- a/impressum.html
+++ b/impressum.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="styles/style.css" type="text/css" rel="stylesheet">
+    <link href="styles/header.css" type="text/css" rel="stylesheet">
     <title>Impressum</title>
 </head>
 <body>
