--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </a>
             </div>
             
-            <p>Christi Sinn war erfüllt mit der Heiligen Schrift. Er zitierte das Wort Gottes bezog sich darauf als entgültige Authorität.
+            <p class="txt">Christi Sinn war erfüllt mit der Heiligen Schrift. Er zitierte das Wort Gottes bezog sich darauf als entgültige Authorität.
                 Die Verse, die er zitierte, trafen immer ins Schwarze-er hatte immer genau die richtigen Worte für die betreffende Situation.
             </p>
         </article>
@@ -38,7 +38,7 @@
                 <a href="#"><h2>Der Stille vor Gott</h2>
                 <img src="" alt="Stille vor Gott"></a>
             </div>
-            <p>
+            <p class="txt">
                 Er war der gesegnete Mann aus Psalm 1, der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann Tag und Nacht.
             </p>
         </article>
