--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="styles/import.css" type="text/css" rel="stylesheet">
-    <link href="styles/viewStyles/index.css" type="text/css" rel="stylesheet">    
+    <link href="styles/viewStyles/index.css" type="text/css" rel="stylesheet">
     <title>Charakter Jesus</title>
 </head>
+
 <body>
     <header>
         <div class="title">
@@ -18,33 +20,37 @@
             <a href="#">Zitate</a>
             <a href="#">Impressum</a>
             <a href="#">Über mich</a>
-        </nav>        
+        </nav>
     </header>
     <main>
         <article class="art art1">
-            <div class="titel">
-                <a href="#">
+            <a href="#">
+                <div class="titel">
                     <h2>Ein Mann der Buches</h2>
                     <img src="" alt="Mann des Buches">
-                </a>
-            </div>
-            
-            <p class="txt">Christi Sinn war erfüllt mit der Heiligen Schrift. Er zitierte das Wort Gottes bezog sich darauf als entgültige Authorität.
-                Die Verse, die er zitierte, trafen immer ins Schwarze-er hatte immer genau die richtigen Worte für die betreffende Situation.
+                </div>
+            </a>
+            <p class="txt">Christi Sinn war erfüllt mit der Heiligen Schrift. Er zitierte das Wort Gottes bezog sich darauf als entgültige
+                Authorität. Die Verse, die er zitierte, trafen immer ins Schwarze-er hatte immer genau die richtigen Worte
+                für die betreffende Situation.
             </p>
         </article>
         <article class="art art2">
-            <div class="titel">
-                <a href="#"><h2>Der Stille vor Gott</h2>
-                <img src="" alt="Stille vor Gott"></a>
-            </div>
+            <a href="#">
+                <div class="titel">
+                    <h2>Der Stille vor Gott</h2>
+                    <img src="" alt="Stille vor Gott">
+                </div>
+            </a>
             <p class="txt">
                 Er war der gesegnete Mann aus Psalm 1, der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann Tag und Nacht.
             </p>
         </article>
     </main>
     <footer>
-        Autor: Schmid Lothar    Aktualisiert: 31.1.2018
+        Autor: Schmid Lothar Aktualisiert: 31.1.2018
     </footer>
+    <script src="scripts/app.js" type="text/javascript"></script>
 </body>
+
 </html>
