--- a/index.html
+++ b/index.html
@@ -9,19 +9,27 @@
     <link href="styles/viewStyles/index.css" type="text/css" rel="stylesheet">
     <title>Charakter Jesus</title>
 </head>
-
 <body>
     <header>
         <div class="title">
             <img src="images/log_normal.svg" alt="logo">
-            <h1>Eigenschaften von Jesus</h1>
-        </div>
-        <nav>
-            <a href="#">Zitate</a>
-            <a href="#">Impressum</a>
-            <a href="#">Über mich</a>
-        </nav>
+            <h1>Charakter Eigenschaften von Jesus Christus</h1>
+        </div>       
     </header>
+    <div class="buch">
+        <p class="author">William MacDonald</p>
+        <p class="buchtitel"><h1>Seiner Spur folgen</h1><h3>Anleitung zur Jüngerschaft</h3></p>
+        <p class="verlag">CLV</p>
+        <p class="erklärung">Dem aufmerksamen Leser wird schnell klar werden, dass dieses
+                Buch nicht einfach eine akademische Abhandlung des Autors ist.
+                Mehr als ein halbes Jahrhundert lang ist die christliche Unterweisung
+                sein Leben und sein Dienst für den Herrn gewesen. Dieses
+                Buch soll sowohl dem Schüler als auch dem Unterweisenden praktische
+                Hilfen geben. Es handelt sich nicht um ein kurzes Buch, das
+                zur gelegentlichen Lektüre bestimmt ist. Obwohl der Autor eine
+                sehr direkte und anschauliche Sprache verwendet, erfordert das
+                Buch Zeit, gründliches Nachdenken und Taten. </p>
+    </div>
     <main>
         <article class="art art1">
             <a href="#">
@@ -47,6 +55,11 @@
             </p>
         </article>
     </main>
+    <nav>
+            <a href="#">Zitate</a>
+            <a href="#">Impressum</a>
+            <a href="#">Über mich</a>
+    </nav>
     <footer>
         Autor: Schmid Lothar Aktualisiert: 31.1.2018
     </footer>
