--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p class="author">William MacDonald</p>
         <p class="buchtitel"><h1>Seiner Spur folgen</h1><h3>Anleitung zur Jüngerschaft</h3></p>
         <p class="verlag">CLV</p>
-        <p class="erklärung">Dem aufmerksamen Leser wird schnell klar werden, dass dieses
+        <p class="erklaerung">Dem aufmerksamen Leser wird schnell klar werden, dass dieses
                 Buch nicht einfach eine akademische Abhandlung des Autors ist.
                 Mehr als ein halbes Jahrhundert lang ist die christliche Unterweisung
                 sein Leben und sein Dienst für den Herrn gewesen. Dieses
