--- a/index.html
+++ b/index.html
@@ -9,56 +9,53 @@
     <link href="styles/viewStyles/index.css" type="text/css" rel="stylesheet">
     <title>Charakter Jesus</title>
 </head>
+
 <body>
     <header>
         <div class="title">
             <img src="images/log_normal.svg" alt="logo">
             <h1>Charakter Eigenschaften von Jesus Christus</h1>
-        </div>       
+        </div>
     </header>
     <div class="buch">
         <p class="author">William MacDonald</p>
-        <p class="buchtitel"><h1>Seiner Spur folgen</h1><h3>Anleitung zur Jüngerschaft</h3></p>
+        <p class="buchtitel">
+            <h1>Seiner Spur folgen</h1>
+            <h3>Anleitung zur Jüngerschaft</h3>
+        </p>
         <p class="verlag">CLV</p>
-        <p class="erklaerung">Dem aufmerksamen Leser wird schnell klar werden, dass dieses
-                Buch nicht einfach eine akademische Abhandlung des Autors ist.
-                Mehr als ein halbes Jahrhundert lang ist die christliche Unterweisung
-                sein Leben und sein Dienst für den Herrn gewesen. Dieses
-                Buch soll sowohl dem Schüler als auch dem Unterweisenden praktische
-                Hilfen geben. Es handelt sich nicht um ein kurzes Buch, das
-                zur gelegentlichen Lektüre bestimmt ist. Obwohl der Autor eine
-                sehr direkte und anschauliche Sprache verwendet, erfordert das
-                Buch Zeit, gründliches Nachdenken und Taten. </p>
+        <p class="erklaerung">Dem aufmerksamen Leser wird schnell klar werden, dass dieses Buch nicht einfach eine akademische Abhandlung des Autors
+            ist. Mehr als ein halbes Jahrhundert lang ist die christliche Unterweisung sein Leben und sein Dienst für den
+            Herrn gewesen. Dieses Buch soll sowohl dem Schüler als auch dem Unterweisenden praktische Hilfen geben. Es handelt
+            sich nicht um ein kurzes Buch, das zur gelegentlichen Lektüre bestimmt ist. Obwohl der Autor eine sehr direkte
+            und anschauliche Sprache verwendet, erfordert das Buch Zeit, gründliches Nachdenken und Taten. </p>
     </div>
     <main>
-        <article class="art art1">
-            <a href="#">
-                <div class="titel">
-                    <h2>Ein Mann der Buches</h2>
-                    <img src="" alt="Mann des Buches">
-                </div>
-            </a>
-            <p class="txt">Christi Sinn war erfüllt mit der Heiligen Schrift. Er zitierte das Wort Gottes bezog sich darauf als entgültige
-                Authorität. Die Verse, die er zitierte, trafen immer ins Schwarze-er hatte immer genau die richtigen Worte
-                für die betreffende Situation.
-            </p>
+        <article class="art">
+            <input name="toggleContent" id="toggleContent" type="checkbox" checked="checked">
+            <label for="toggleContent" class="open">Der Stille vor Gott</label>
+            <label for="toggleContent" class="close">Der Stille vor Gottzuklappen</label>
+            <div>
+                <p>
+                    Er war der gesegnete Mann aus Psalm 1, der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann Tag und Nacht.
+                </p>
+            </div>
         </article>
-        <article class="art art2">
-            <a href="#">
-                <div class="titel">
-                    <h2>Der Stille vor Gott</h2>
-                    <img src="" alt="Stille vor Gott">
-                </div>
-            </a>
-            <p class="txt">
-                Er war der gesegnete Mann aus Psalm 1, der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann Tag und Nacht.
-            </p>
+        <article class="art">
+            <input name="toggleContent" id="toggleContent" type="checkbox" checked="checked">
+            <label for="toggleContent" class="open">Der Stille vor Gott</label>
+            <label for="toggleContent" class="close">Der Stille vor Gottzuklappen</label>
+            <div>
+                <p>
+                    Er war der gesegnete Mann aus Psalm 1, der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann Tag und Nacht.
+                </p>
+            </div>
         </article>
     </main>
     <nav>
-            <a href="#">Zitate</a>
-            <a href="#">Impressum</a>
-            <a href="#">Über mich</a>
+        <a href="#">Zitate</a>
+        <a href="#">Impressum</a>
+        <a href="#">Über mich</a>
     </nav>
     <footer>
         Autor: Schmid Lothar Aktualisiert: 31.1.2018
