--- a/index.html
+++ b/index.html
@@ -17,40 +17,51 @@
             <h1>Charakter Eigenschaften von Jesus Christus</h1>
         </div>
     </header>
-    <div class="buch">
-        <p class="author">William MacDonald</p>
-        <p class="buchtitel">
-            <h1>Seiner Spur folgen</h1>
-            <h3>Anleitung zur Jüngerschaft</h3>
-        </p>
-        <p class="verlag">CLV</p>
-        <p class="erklaerung">Dem aufmerksamen Leser wird schnell klar werden, dass dieses Buch nicht einfach eine akademische Abhandlung des Autors
-            ist. Mehr als ein halbes Jahrhundert lang ist die christliche Unterweisung sein Leben und sein Dienst für den
-            Herrn gewesen. Dieses Buch soll sowohl dem Schüler als auch dem Unterweisenden praktische Hilfen geben. Es handelt
-            sich nicht um ein kurzes Buch, das zur gelegentlichen Lektüre bestimmt ist. Obwohl der Autor eine sehr direkte
-            und anschauliche Sprache verwendet, erfordert das Buch Zeit, gründliches Nachdenken und Taten. </p>
-    </div>
     <main>
-        <article class="art">
-            <input name="toggleContent" id="toggleContent" type="checkbox" checked="checked">
-            <label for="toggleContent" class="open">Der Stille vor Gott</label>
-            <label for="toggleContent" class="close">Der Stille vor Gottzuklappen</label>
-            <div>
-                <p>
-                    Er war der gesegnete Mann aus Psalm 1, der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann Tag und Nacht.
+        <div class="vorwort" id="home">
+            <title>Streben Sie danach, wie Jesus zu sein                
+            </title>
+            <p>Wir sollten immer beten:
+                <em>»Herr, mache mich mehr wie Christus und weniger wie mich selbst.«</em>
+                Kein Christ würde darüber diskutieren, dass wir mehr wie der Herr Jesus sein sollten. Das ist einfach eine Tatsache. Es gibt
+                kein höheres Ziel, kein erhabeneres Bestreben, als Christus ähnlich zu werden. Eines von Gottes großen Zielen
+                mit seinen Kindern ist es, sie in das Ebenbild seines Sohnes umzugestalten. Das ist so klar, dass man es
+                hier nicht weiter ausführen muss. Gottes Ziel ist es, uns Jesus gleichförmig zu machen. Durch das ganze Neue
+                Testament hindurch wird das gelehrt und wir hören es oft in Predigten. Aber es bleibt immer noch die Frage:
+                »Wie geschieht das?« Wie können wir Tag für Tag und ganz praktisch mit Gott zusammen- 94 Der Charakter des
+                Christen arbeiten, um unserem Herrn Jesus immer ähnlicher zu werden? Es ist eine Sache zu wissen, was wir
+                erreichen sollen, und eine andere, wie wir das erreichen können. </p>
+        </div>
+
+        <article class="tab">
+            <input id="tab-one" type="radio" name="tabs">
+            <label for="tab-one">Er war ein Mann des Buches</label>
+            <div class="tab-content">
+                <p>Christi Sinn war erfüllt mit der Heiligen Schrift. Er zitierte das Wort Gottes und bezog sich darauf als
+                    endgültige Autorität. Die Verse, die er zitierte, trafen immer ins Schwarze – er hatte immer genau die
+                    richtigen Worte für die betreffende Situation
                 </p>
+                <a href="#home" alt="Home" class="home">Nach oben</a>
             </div>
         </article>
-        <article class="art">
-            <input name="toggleContent" id="toggleContent" type="checkbox" checked="checked">
-            <label for="toggleContent" class="open">Der Stille vor Gott</label>
-            <label for="toggleContent" class="close">Der Stille vor Gottzuklappen</label>
-            <div>
-                <p>
-                    Er war der gesegnete Mann aus Psalm 1, der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann Tag und Nacht.
-                </p>
+        <article class="tab">
+            <input id="tab-two" type="radio" name="tabs">
+            <label for="tab-two">Er war ein Mann der Stille vor Gott</label>
+            <div class="tab-content">
+                <p> Er war der gesegnete Mann aus Psalm 1, der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann
+                    Tag und Nacht</p>
+                <a href="#home" alt="Home" class="home">Nach oben</a>
             </div>
         </article>
+        <article class="tab">
+            <input id="tab-three" type="radio" name="tabs">
+            <label for="tab-three">Er war ein Mann der Anbetung</label>
+            <div class="tab-content">
+                <p>Der höchste Ausdruck der Anbetung unseres Herrn war sein Opfertod auf Golgatha im Gehorsam gegenüber dem
+                    Willen seines Vaters.</p>
+                <a href="#home" alt="Home" class="home">Nach oben</a>
+            </div>
+        </article>    
     </main>
     <nav>
         <a href="#">Zitate</a>
