Grund Lyout Mobile

--- a/index.html
+++ b/index.html
@@ -19,22 +19,27 @@
     </header>
     <main>
         <div class="vorwort" id="home">
-            <title>Streben Sie danach, wie Jesus zu sein                
-            </title>
-            <p>Wir sollten immer beten:
-                <em>»Herr, mache mich mehr wie Christus und weniger wie mich selbst.«</em>
-                Kein Christ würde darüber diskutieren, dass wir mehr wie der Herr Jesus sein sollten. Das ist einfach eine Tatsache. Es gibt
-                kein höheres Ziel, kein erhabeneres Bestreben, als Christus ähnlich zu werden. Eines von Gottes großen Zielen
-                mit seinen Kindern ist es, sie in das Ebenbild seines Sohnes umzugestalten. Das ist so klar, dass man es
-                hier nicht weiter ausführen muss. Gottes Ziel ist es, uns Jesus gleichförmig zu machen. Durch das ganze Neue
-                Testament hindurch wird das gelehrt und wir hören es oft in Predigten. Aber es bleibt immer noch die Frage:
-                »Wie geschieht das?« Wie können wir Tag für Tag und ganz praktisch mit Gott zusammen- 94 Der Charakter des
-                Christen arbeiten, um unserem Herrn Jesus immer ähnlicher zu werden? Es ist eine Sache zu wissen, was wir
-                erreichen sollen, und eine andere, wie wir das erreichen können. </p>
+            <title>Streben Sie danach, wie Jesus zu sein</title>
         </div>
-
         <article class="tab">
-            <input id="tab-one" type="radio" name="tabs">
+            <input id="tab-one" type="checkbox" name="tabs">
+            <label for="tab-one">Einleitung</label>
+            <div class="tab-content">
+                <p>Wir sollten immer beten:
+                    <quote class="bib">»Herr, mache mich mehr wie Christus und weniger wie mich selbst.«</quote>
+                    Kein Christ würde darüber diskutieren, dass wir mehr wie der Herr Jesus sein sollten.<br> Das ist einfach eine Tatsache.<br> Es gibt
+                    kein höheres Ziel, kein erhabeneres Bestreben, als Christus ähnlich zu werden. Eines von Gottes großen Zielen
+                    mit seinen Kindern ist es, sie in das Ebenbild seines Sohnes umzugestalten.<br> Das ist so klar, dass man es
+                    hier nicht weiter ausführen muss. Gottes Ziel ist es, uns Jesus gleichförmig zu machen. Durch das ganze Neue
+                    Testament hindurch wird das gelehrt und wir hören es oft in Predigten.<br> Aber es bleibt immer noch die Frage:
+                    »Wie geschieht das?« Wie können wir Tag für Tag und ganz praktisch mit Gott zusammen- 94 Der Charakter des
+                    Christen arbeiten, um unserem Herrn Jesus immer ähnlicher zu werden?<br> Es ist eine Sache zu wissen, was wir
+                    erreichen sollen, und eine andere, wie wir das erreichen können. </p>
+                <a href="#home" alt="Home" class="home">Nach oben</a>
+            </div>
+        </article>
+        <article class="tab">
+            <input id="tab-one" type="checkbox" name="tabs">
             <label for="tab-one">Er war ein Mann des Buches</label>
             <div class="tab-content">
                 <p>Christi Sinn war erfüllt mit der Heiligen Schrift. Er zitierte das Wort Gottes und bezog sich darauf als
@@ -45,16 +50,17 @@
             </div>
         </article>
         <article class="tab">
-            <input id="tab-two" type="radio" name="tabs">
+            <input id="tab-two" type="checkbox" name="tabs">
             <label for="tab-two">Er war ein Mann der Stille vor Gott</label>
             <div class="tab-content">
-                <p> Er war der gesegnete Mann aus Psalm 1, der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann
+                <p> Er war der gesegnete Mann aus <quote class="bib"><a class="abib" href="https://www.bibleserver.com/text/SLT/Psalm1,2">Psalm 1</a></quote>, 
+                    der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann
                     Tag und Nacht</p>
                 <a href="#home" alt="Home" class="home">Nach oben</a>
             </div>
         </article>
         <article class="tab">
-            <input id="tab-three" type="radio" name="tabs">
+            <input id="tab-three" type="checkbox" name="tabs">
             <label for="tab-three">Er war ein Mann der Anbetung</label>
             <div class="tab-content">
                 <p>Der höchste Ausdruck der Anbetung unseres Herrn war sein Opfertod auf Golgatha im Gehorsam gegenüber dem
