--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <main>
         <div class="vorwort" id="home">
             <title>Streben Sie danach, wie Jesus zu sein</title>
+            <h3>Aus dem Buch: Seiner Spur folgen</h3>
+            Author: <a href="https://clv.de/Autoren/William-MacDonald/">William MacDonald</a><br>
+            <span>PDF: <a href="http://www.sermon-online.de/search.pl?lang=de&id=15403&title=&biblevers=&searchstring=&author=0&language=0&category=0&play=0&tm=2">
+                CLV - Verlag. Vom <img src="./images/sermon_top.gif"> runter geladen.
+                </a></span>
+            Bibelverse: <a href="https://www.bibleserver.com/start">Bibelserver ERF</a><br>
         </div>
         <article class="tab">
             <input id="tab-one" type="checkbox" name="tabs">
