--- a/index.html
+++ b/index.html
@@ -19,61 +19,84 @@
     </header>
     <main>
         <div class="vorwort" id="home">
-            <title>Streben Sie danach, wie Jesus zu sein</title>
-            <h3>Aus dem Buch: Seiner Spur folgen</h3>
-            Author: <a href="https://clv.de/Autoren/William-MacDonald/">William MacDonald</a><br>
-            <span>PDF: <a href="http://www.sermon-online.de/search.pl?lang=de&id=15403&title=&biblevers=&searchstring=&author=0&language=0&category=0&play=0&tm=2">
-                CLV - Verlag. Vom <img src="./images/sermon_top.gif"> runter geladen.
-                </a></span>
-            Bibelverse: <a href="https://www.bibleserver.com/start">Bibelserver ERF</a><br>
+            <div class="vorwortTitel">Aus dem Buch: Seiner Spur folgen</div>
+            <div class="table">
+                <div class="tr">
+                    <div class="td">Author:</div>
+                    <div class="td">
+                        <a href="https://clv.de/Autoren/William-MacDonald/">William MacDonald</a>
+                    </div>
+                </div>
+                <div class="tr">
+                    <div class="td">PDF:</div>
+                    <div class="td">
+                        <a href="http://www.sermon-online.de/search.pl?lang=de&id=15403&title=&biblevers=&searchstring=&author=0&language=0&category=0&play=0&tm=2">
+                            CLV - Verlag.
+                            <br>Vom
+                            <img src="./images/sermon_top.gif"> Server geladen.
+                        </a>
+                    </div>
+                </div>
+                <div class="tr">
+                    <div class="td">Bibelverse:</div>
+                    <div class="td">
+                        <a href="https://www.bibleserver.com/start">Bibelserver ERF Schlachter 2000</a>
+                    </div>
+                </div>
+            </div>
         </div>
         <article class="tab">
-            <input id="tab-one" type="checkbox" name="tabs">
-            <label for="tab-one">Einleitung</label>
+            <input id="tab-1" type="checkbox" name="tabs">
+            <label for="tab-1">Einleitung</label>
             <div class="tab-content">
                 <p>Wir sollten immer beten:
-                    <quote class="bib">»Herr, mache mich mehr wie Christus und weniger wie mich selbst.«</quote>
-                    Kein Christ würde darüber diskutieren, dass wir mehr wie der Herr Jesus sein sollten.<br> Das ist einfach eine Tatsache.<br> Es gibt
-                    kein höheres Ziel, kein erhabeneres Bestreben, als Christus ähnlich zu werden. Eines von Gottes großen Zielen
-                    mit seinen Kindern ist es, sie in das Ebenbild seines Sohnes umzugestalten.<br> Das ist so klar, dass man es
-                    hier nicht weiter ausführen muss. Gottes Ziel ist es, uns Jesus gleichförmig zu machen. Durch das ganze Neue
-                    Testament hindurch wird das gelehrt und wir hören es oft in Predigten.<br> Aber es bleibt immer noch die Frage:
-                    »Wie geschieht das?« Wie können wir Tag für Tag und ganz praktisch mit Gott zusammen- 94 Der Charakter des
-                    Christen arbeiten, um unserem Herrn Jesus immer ähnlicher zu werden?<br> Es ist eine Sache zu wissen, was wir
-                    erreichen sollen, und eine andere, wie wir das erreichen können. </p>
-                <a href="#home" alt="Home" class="home">Nach oben</a>
-            </div>
-        </article>
-        <article class="tab">
-            <input id="tab-one" type="checkbox" name="tabs">
-            <label for="tab-one">Er war ein Mann des Buches</label>
-            <div class="tab-content">
-                <p>Christi Sinn war erfüllt mit der Heiligen Schrift. Er zitierte das Wort Gottes und bezog sich darauf als
-                    endgültige Autorität. Die Verse, die er zitierte, trafen immer ins Schwarze – er hatte immer genau die
-                    richtigen Worte für die betreffende Situation
+                    <blockquote class="bib">»Herr, mache mich mehr wie Christus und weniger wie mich selbst.«</blockquote>
+                    Kein Christ würde darüber diskutieren, dass wir mehr wie der Herr Jesus sein sollten.
+                    <br> Das ist einfach eine Tatsache.
+                    <br> Es gibt kein höheres Ziel, kein erhabeneres Bestreben, als Christus ähnlich zu werden. Eines von Gottes
+                    großen Zielen mit seinen Kindern ist es, sie in das Ebenbild seines Sohnes umzugestalten.
+                    <br> Das ist so klar, dass man es hier nicht weiter ausführen muss. Gottes Ziel ist es, uns Jesus gleichförmig
+                    zu machen. Durch das ganze Neue Testament hindurch wird das gelehrt und wir hören es oft in Predigten.
+                    <br> Aber es bleibt immer noch die Frage: »Wie geschieht das?« Wie können wir Tag für Tag und ganz praktisch
+                    mit Gott zusammen- 94 Der Charakter des Christen arbeiten, um unserem Herrn Jesus immer ähnlicher zu
+                    werden?
+                    <br> Es ist eine Sache zu wissen, was wir erreichen sollen, und eine andere, wie wir das erreichen können.
                 </p>
                 <a href="#home" alt="Home" class="home">Nach oben</a>
             </div>
         </article>
         <article class="tab">
-            <input id="tab-two" type="checkbox" name="tabs">
-            <label for="tab-two">Er war ein Mann der Stille vor Gott</label>
+            <input id="tab-2" type="checkbox" name="tabs">
+            <label for="tab-2">Er war ein Mann des Buches</label>
             <div class="tab-content">
-                <p> Er war der gesegnete Mann aus <quote class="bib"><a class="abib" href="https://www.bibleserver.com/text/SLT/Psalm1,2">Psalm 1</a></quote>, 
-                    der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann
-                    Tag und Nacht</p>
+                <p>Christi Sinn war erfüllt mit der Heiligen Schrift. Er zitierte das Wort Gottes     und bezog sich darauf als
+                    endgültige Autorität.
+                    <br> Die Verse, die er zitierte, trafen immer ins Schwarze – er hatte immer genau die richtigen Worte für
+                    die betreffende Situation
+                </p>
                 <a href="#home" alt="Home" class="home">Nach oben</a>
             </div>
         </article>
         <article class="tab">
-            <input id="tab-three" type="checkbox" name="tabs">
-            <label for="tab-three">Er war ein Mann der Anbetung</label>
+            <input id="tab-3" type="checkbox" name="tabs">
+            <label for="tab-3">Er war ein Mann der Stille vor Gott</label>
+            <div class="tab-content">
+                <p> Er war der gesegnete Mann aus
+                    <blockquote class="bib">
+                        <a class="abib" href="https://www.bibleserver.com/text/SLT/Psalm1,2">Psalm 1</a>
+                    </blockquote>, der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann Tag und Nacht</p>
+                <a href="#home" alt="Home" class="home">Nach oben</a>
+            </div>
+        </article>
+        <article class="tab">
+            <input id="tab-4" type="checkbox" name="tabs">
+            <label for="tab-4">Er war ein Mann der Anbetung</label>
             <div class="tab-content">
                 <p>Der höchste Ausdruck der Anbetung unseres Herrn war sein Opfertod auf Golgatha im Gehorsam gegenüber dem
                     Willen seines Vaters.</p>
                 <a href="#home" alt="Home" class="home">Nach oben</a>
             </div>
-        </article>    
+        </article>
     </main>
     <nav>
         <a href="#">Zitate</a>
