--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
             <div class="vorwortTitel">Aus dem Buch: Seiner Spur folgen</div>
             <div class="table">
                 <div class="tr">
-                    <div class="td">Author:</div>
+                    <div class="td label">Author:</div>
                     <div class="td">
                         <a href="https://clv.de/Autoren/William-MacDonald/">William MacDonald</a>
                     </div>
                 </div>
                 <div class="tr">
-                    <div class="td">PDF:</div>
+                    <div class="td label">PDF:</div>
                     <div class="td">
                         <a href="http://www.sermon-online.de/search.pl?lang=de&id=15403&title=&biblevers=&searchstring=&author=0&language=0&category=0&play=0&tm=2">
                             CLV - Verlag.
-                            <br>Vom
-                            <img src="./images/sermon_top.gif"> Server geladen.
+                            <br>Von
+                            <img src="./images/sermon_top.gif">
                         </a>
                     </div>
                 </div>
                 <div class="tr">
-                    <div class="td">Bibelverse:</div>
+                    <div class="td label">Bibelverse:</div>
                     <div class="td">
                         <a href="https://www.bibleserver.com/start">Bibelserver ERF Schlachter 2000</a>
                     </div>
