--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
                 </div>
             </div>
         </div>
+        <!-- Accrdion -->
         <article class="tab">
             <input id="tab-1" type="checkbox" name="tabs">
             <label for="tab-1">Einleitung</label>
             <div class="tab-content">
-                <p>Wir sollten immer beten:
-                    <blockquote class="bib">»Herr, mache mich mehr wie Christus und weniger wie mich selbst.«</blockquote>
+                <p>Wir sollten immer beten:</p>
+                <blockquote class="bib">»Herr, mache mich mehr wie Christus und weniger wie mich selbst.«</blockquote>
+                <p>
                     Kein Christ würde darüber diskutieren, dass wir mehr wie der Herr Jesus sein sollten.
                     <br> Das ist einfach eine Tatsache.
                     <br> Es gibt kein höheres Ziel, kein erhabeneres Bestreben, als Christus ähnlich zu werden. Eines von Gottes
@@ -69,7 +71,7 @@
             <input id="tab-2" type="checkbox" name="tabs">
             <label for="tab-2">Er war ein Mann des Buches</label>
             <div class="tab-content">
-                <p>Christi Sinn war erfüllt mit der Heiligen Schrift. Er zitierte das Wort Gottes     und bezog sich darauf als
+                <p>Christi Sinn war erfüllt mit der Heiligen Schrift. Er zitierte das Wort Gottes und bezog sich darauf als
                     endgültige Autorität.
                     <br> Die Verse, die er zitierte, trafen immer ins Schwarze – er hatte immer genau die richtigen Worte für
                     die betreffende Situation
@@ -81,10 +83,13 @@
             <input id="tab-3" type="checkbox" name="tabs">
             <label for="tab-3">Er war ein Mann der Stille vor Gott</label>
             <div class="tab-content">
-                <p> Er war der gesegnete Mann aus
-                    <blockquote class="bib">
-                        <a class="abib" href="https://www.bibleserver.com/text/SLT/Psalm1,2">Psalm 1</a>
-                    </blockquote>, der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann Tag und Nacht</p>
+                <p> Er war der gesegnete Mann aus</p>
+                <blockquote class="bib">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates earum quos ipsum assumenda similique facilis quia quibusdam
+                    vitae ipsam, vel aut animi impedit in tenetur pariatur itaque laudantium. Dolorum, sed!
+                    <a class="abib" href="https://www.bibleserver.com/text/SLT/Psalm1,2">Psalm 1</a>
+                </blockquote>,
+                <p> der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann Tag und Nacht</p>
                 <a href="#home" alt="Home" class="home">Nach oben</a>
             </div>
         </article>
@@ -104,7 +109,7 @@
         <a href="#">Über mich</a>
     </nav>
     <footer>
-        Autor: Schmid Lothar Aktualisiert: 31.1.2018
+        Autor: Schmid Lothar Aktualisiert: 7.2.2018
     </footer>
     <script src="scripts/app.js" type="text/javascript"></script>
 </body>
