--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <a href="http://www.sermon-online.de/search.pl?lang=de&id=15403&title=&biblevers=&searchstring=&author=0&language=0&category=0&play=0&tm=2">
                                 <img src="./images/sermon_top.gif">
                             </a>
-                       </div>
+                        </div>
                     </div>
                 </div>
                 <div class="tr">
@@ -56,7 +56,7 @@
                 <p>Wir sollten immer beten:</p>
                 <blockquote class="bib">
                     <p>
-                       <span>»Herr, mache mich mehr wie Christus und weniger wie mich selbst.«</span> 
+                        <span>»Herr, mache mich mehr wie Christus und weniger wie mich selbst.«</span>
                     </p>
                 </blockquote>
                 <p>
@@ -76,7 +76,7 @@
         </article>
         <article class="tab">
             <input id="tab-2" type="checkbox" name="tabs">
-            
+
             <label for="tab-2">Er war ein Mann des Buches</label>
             <div class="tab-content">
                 <p>Christi Sinn war erfüllt mit der Heiligen Schrift. Er zitierte das Wort Gottes und bezog sich darauf als
@@ -113,13 +113,14 @@
             </div>
         </article>
     </main>
-    <nav>
-        <a href="#">Links</a>
-        <a href="#">Impressum</a>
-        <a href="#">Über mich</a>
-    </nav>
+
     <footer>
-        Autor: Schmid Lothar Aktualisiert: 7.2.2018
+        <nav>
+            <a href="#">Links</a>
+            <a href="#">Impressum</a>
+            <a href="#">Über mich</a>
+        </nav>
+        <p>Autor: Schmid Lothar Aktualisiert: 7.2.2018</p>
     </footer>
     <script src="scripts/app.js" type="text/javascript"></script>
 </body>
