--- a/index.html
+++ b/index.html
@@ -115,10 +115,12 @@
     </main>
 
     <footer>
-        <nav>
-            <a href="#">Links</a>
-            <a href="#">Impressum</a>
-            <a href="#">Über mich</a>
+        <nav class="navFooter">
+            <ul>
+                <li><a href="#">Links</a></li>
+                <li><a href="#">Impressum</a></li>
+                <li><a href="#">Über mich</a></li>
+            </ul>
         </nav>
         <p>Autor: Schmid Lothar Aktualisiert: 7.2.2018</p>
     </footer>
